Refactor: Improve overall code quality and Javadoc documentation